# github-commit-reminder

./: .env.example  .gitignore  Cargo.toml  README.md  install.sh
src/: github.rs  main.rs  telegram.rs
