[package]
name = "github-commit-reminder"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
chrono = "0.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"